fixed font spacing

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 body {
     font-family: 'Inter', sans-serif;
-    letter-spacing: -0.075rem;
     margin: 0;
 }
 
